# easy-erg

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.linux  README.rst  README.txt
demo/: CMakeLists.txt  RPPM3CSAFE.def  RPPM3CSAFE.ini  RPPM3DDI.def  RPPM3USB.def  demo.cpp  demoDiscoverErgs.cpp  demoIntervals.cpp  demoState.cpp
docs/: ReportedStatesForWorkoutTypes.xls  dynlink.c  timeIntervals.xls
lib/sdk/: README.txt
src/: CIIHeaders.cpp  CIIHeaders.h  CMakeLists.txt  CSafeDll.cpp  CSafeDll.h  Erg.cpp  Erg.h  ErgNet.cpp  ErgNet.h  ErgState.cpp  ErgState.h  Filter.h  Pm3Erg.cpp  Pm3Erg.h  RunningAverage.h  SlideRatio.cpp  SlideRatio.h  linux_erg_types.h
test/: CMakeLists.txt  Makefile  MockErgNet.h  test_discover_ergs.cpp  test_running_average.cpp
